# passman

./: .gitignore  README.md  pyproject.toml
data/: build.sql
passman/: __init__.py  __main__.py  cli.py  database.py  errors.py  logger.py  manager.py  utils.py
passman/commands/: log.py  quick.py
passman/core/: __init__.py  constants.py  database.py  errors.py  exceptions.py  logger.py  manager.py  utils.py
passman/data/: config.json  passwords.db
passman/data/assets/: ideas.txt  passwords.txt  schema.sql
passman/private/: README.md  strength.py
passman/utils/: __init__.py  checks.py  errors.py  flags.py  formats.py  utils.py
